--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h1><span><strong>THEODORE TAN</strong></span></h1>
             </div>
             <div class='words'>
-                <p id='slide' class='slide'><strong>DANCER / PROGRAMMER / EXPLORER</strong></p>
+                <p id='slide' class='slide'><strong>THINKER / PROGRAMMER / DANCER</strong></p>
                 <!--PROGRAMMER, DANCER, COMIC BOOK ENTHUSIAST, STUDENT, GOLDEN HAWK-->
             </div>
             <div class='links'>
