made images do something

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <!--PROGRAMMER, DANCER, COMIC BOOK ENTHUSIAST, STUDENT, GOLDEN HAWK-->
             </div>
             <div class='links'>
-                <a href='https://github.com/th30retical'><img src='images/github.png'/> </a>
-                <a href='files/Resume.pdf'><img src='images/resume.png'/> </a>
-                <a href='https://ca.linkedin.com/pub/theodore-tan/b0/b0a/999'><img src='images/linkedin.png'/> </a>
+                <a href='https://github.com/th30retical'><img src="images/github.png" onmouseover="this.src='images/inv_github.png'" onmouseout="this.src='images/github.png'"/></a>
+                <a href='files/Resume.pdf'><img src='images/resume.png' onmouseover="this.src='images/inv_resume.png'" onmouseout="this.src='images/resume.png'"/> </a>
+                <a href='https://ca.linkedin.com/pub/theodore-tan/b0/b0a/999'><img src='images/linkedin.png' onmouseover="this.src='images/inv_linkedin.png'" onmouseout="this.src='images/linkedin.png'"/> </a>
             </div>
         </div>
         <div class='footer'>
