--- a/new-index.html
+++ b/new-index.html
@@ -5,6 +5,7 @@
         <title>Theodore Tan</title>
         <meta name="author" content="Theodore Tan">
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+        <link rel="shortcut icon" href="images/favicon.ico" />
         <link href='http://fonts.googleapis.com/css?family=Julius+Sans+One' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/main.css" type="text/css">
     </head>
@@ -16,40 +17,118 @@
                 </div>
                 <div class="scroller">
                     <p>
-                        words and stuff here yo
+                        words and shit go here
                     </p>
                 </div>
             </div>
         </div>
-        <div class="section a">
-            <nav>
-                <div class="home-icon">
-                    <a href="#"><img alt="" /></a>
-                </div>
-                <div class="navigation">
-                    <ul class="nav-bar">
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Resume</a></li>
-                        <li><a href="#">Projects</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-            </nav>
+        <div class="section a header light-hidden">
+            <div class="home-icon">
+                <a href="#"><object type="image/svg+xml" data="images/favicon.svg" class="logo"><img src="images/favicon.png" /></object></a>
+            </div>
+            <div class="navigation">
+                <ul class="nav-bar">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Resume</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
         </div>
-        <footer>
-            <nav>
-                <div class="links">
-                </div>
-                <div class="scrollToTop">
-                </div>
-                <div class="copy">
-                    <h6>&copy; 2015 Theodore Tan</h6>
-                </div>
-            </nav>
+        <div class="big-ass-div-to-demo-scroll">
+            <pre>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+WOW
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            </pre>
+        </div>
+        <footer class="section z footer">
+            <div class="copy">
+                <span>built with</span>
+                <object class="coffee-icon" type="image/svg+xml" data="images/coffee.svg"><img src="images/coffee.png"/></object>
+                <span>by theodore</span>
+            </div>
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script src="js/queue.min.js"></script>
+        <script src="js/queue.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
