--- a/new-index.html
+++ b/new-index.html
@@ -16,111 +16,42 @@
                     <h1>Theodore Tan</h1>
                 </div>
                 <div class="scroller">
-                    <p>
-                        words and shit go here
-                    </p>
+                    <p>I am a . . .</p>
                 </div>
             </div>
         </div>
-        <div class="section a header light-hidden">
+        <div class="header light-hidden">
             <div class="home-icon">
                 <a href="#"><object type="image/svg+xml" data="images/favicon.svg" class="logo"><img src="images/favicon.png" /></object></a>
             </div>
             <div class="navigation">
-                <ul class="nav-bar">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Resume</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
+                <ul class="nav-bar clearfix">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#work-experience">Work Experience</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
-        <div class="big-ass-div-to-demo-scroll">
-            <pre>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-WOW
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            </pre>
+        <div class="section about">
+            <div class="train">
+                <p>talk about yourself</p>
+            </div>
         </div>
-        <footer class="section z footer">
+        <div class="section work-experience">
+
+        </div>
+        <div class="section projects">
+
+        </div>
+        <div class="section blog">
+
+        </div>
+        <div class="section contact">
+
+        </div>
+        <footer class="footer clearfix">
             <div class="copy">
                 <span>built with</span>
                 <object class="coffee-icon" type="image/svg+xml" data="images/coffee.svg"><img src="images/coffee.png"/></object>
@@ -128,6 +59,7 @@ WOW
             </div>
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="js/jquery-1.11.3.min.js"></script>
         <script src="js/queue.js"></script>
         <script src="js/main.js"></script>
     </body>
