made links change colour on hover

--- a/index.html
+++ b/index.html
@@ -65,15 +65,17 @@
             <h3>Jr. Web Developer</h3>
             <p>at Clausehound</p>
             <p>May 2015 - Present</p>
+            <p><span class="clausehound">link</span></p>
           </div>
           <div class="work-2">
             <h3>Instructional Assistant</h3>
             <p>at Wilfrid Laurier University</p>
             <p>Sept. 2014 - April 2015</p>
+            <p><span class="wlu">link</span></p>
           </div>
         </div>
         <div class="resume">
-          <p>link to resume</p>
+          <p><span>link to resume</span></p>
         </div>
       </div>
     </div>
