--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Theodore Tan</title>
+    <title>Coming Soon · Theodore Tan</title>
     <meta name="author" content="Theodore Tan">
-    <!-- <link rel="shortcut icon" href="assets/icon/favicon.ico" /> -->
-    <link rel="stylesheet" href="/css/main.css" type="text/css">
+    <link rel="shortcut icon" href="assets/icon/favicon.ico" />
+    <link rel="stylesheet" href="./css/main.css" type="text/css">
   </head>
   <body>
-
+		<div class="container home">
+			<object type="image/svg+xml" data="./assets/coming_soon.svg" class="coming-soon"></object>
+		</div>
     <script src="js/main.js"></script>
   </body>
 </html>
