--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Coming Soon · Theodore Tan</title>
+    <!-- <title>Coming Soon · Theodore Tan</title> -->
+		<title>Theodore Tan</title>
     <meta name="author" content="Theodore Tan">
-    <link rel="shortcut icon" href="assets/icon/favicon.ico" />
+    <link rel="shortcut icon" href="favicon.ico" />
 		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css" type="text/css">
   </head>
@@ -32,13 +33,15 @@
 
 		<div class="wrapper">
 			<div class="experience-list">
-				<div class="square experience">
+				<div class="square experience sudoku">
 					<a href="https://github.com/th30retical/sudoku-ai">
 						<div class="img-wrapper">
 							<img class="exp-img" src="./assets/experience/sudoku-500.png" alt="">
 						</div>
-						<div class="hidden">
-							<h4>Sudoku Solver</h4>
+						<div class="exp-words">
+							<div class="center">
+								<h3>Sudoku Solver</h3>
+							</div>
 						</div>
 					</a>
 				</div>
@@ -47,8 +50,10 @@
 						<div class="img-wrapper">
 							<img class="exp-img" src="./assets/experience/bars-500.png" alt="">
 						</div>
-						<div class="hidden">
-							<h4>Bars</h4>
+						<div class="exp-words">
+							<div class="center">
+								<h3>Bars</h3>
+							</div>
 						</div>
 					</a>
 				</div>
@@ -57,8 +62,10 @@
 						<div class="img-wrapper">
 							<img class="exp-img" src="./assets/experience/north60-500.png" alt="">
 						</div>
-						<div class="hidden">
-							<h4>North60</h4>
+						<div class="exp-words">
+							<div class="center">
+								<h3>North60</h3>
+							</div>
 						</div>
 					</a>
 				</div>
@@ -67,8 +74,10 @@
 						<div class="img-wrapper">
 							<img class="exp-img" src="./assets/experience/rideon-500.png" alt="">
 						</div>
-						<div class="hidden">
-							<h4>RideON</h4>
+						<div class="exp-words">
+							<div class="center">
+								<h3>RideON</h3>
+							</div>
 						</div>
 					</a>
 				</div>
@@ -77,8 +86,10 @@
 						<div class="img-wrapper">
 							<img class="exp-img" src="./assets/experience/clausehound-500.png" alt="">
 						</div>
-						<div class="hidden">
-							<h4>Clausehound</h4>
+						<div class="exp-words">
+							<div class="center">
+								<h3>Clausehound</h3>
+							</div>
 						</div>
 					</a>
 				</div>
@@ -87,8 +98,10 @@
 						<div class="img-wrapper">
 							<img class="exp-img" src="./assets/experience/ration-500.png" alt="">
 						</div>
-						<div class="hidden">
-							<h4>Project Ration</h4>
+						<div class="exp-words">
+							<div class="center">
+								<h3>Project Ration</h3>
+							</div>
 						</div>
 					</a>
 				</div>
