--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Theodore Tan">
     <link rel="shortcut icon" href="favicon.ico" />
 		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+		<!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:800" rel="stylesheet"> -->
     <link rel="stylesheet" href="./css/main.css" type="text/css">
   </head>
   <body id="is-loading">
@@ -18,22 +19,22 @@
 			<p class="words">Full-Stack Developer</p>
 		</div>
 
-		<!-- <nav>
-			<div class="">
-				<a href="">Theodore Tan</a>
+		<nav>
+			<div class="left">
+				<h1><a class="logo-name" href="">Theodore Tan</a></h1>
 			</div>
-			<div class="">
-				<ul>
-					<li>About Me</li>
-					<li>Experience</li>
-					<li>Contact</li>
+			<div class="right">
+				<ul class="nav-menu">
+					<li><a href="">About Me</a></li>
+					<li><a href="">Experience</a></li>
+					<li><a href="">Contact</a></li>
 				</ul>
 			</div>
-		</nav> -->
+		</nav>
 
 		<div class="wrapper">
 			<div class="experience-list">
-				<div class="square experience sudoku">
+				<div class="square experience">
 					<a href="https://github.com/th30retical/sudoku-ai">
 						<div class="img-wrapper">
 							<img class="exp-img" src="./assets/experience/sudoku-500.png" alt="">
