--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
 			</div>
 		</div>
 
+		<div class="overlay hidden">
+			
+		</div>
+
     <script src="./js/main.js"></script>
   </body>
 </html>
