--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="author" content="Theodore Tan">
     <link rel="shortcut icon" href="favicon.ico" />
 		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-		<!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:800" rel="stylesheet"> -->
     <link rel="stylesheet" href="./css/main.css" type="text/css">
   </head>
   <body id="is-loading">
@@ -21,13 +20,13 @@
 
 		<nav>
 			<div class="left">
-				<h1><a class="logo-name" href="">Theodore Tan</a></h1>
+				<h1><a class="logo-name" href="#">Theodore Tan</a></h1>
 			</div>
 			<div class="right">
 				<ul class="nav-menu">
-					<li><a href="">About Me</a></li>
-					<li><a href="">Experience</a></li>
-					<li><a href="">Contact</a></li>
+					<li><a href="#" class="links">About Me</a></li>
+					<li><a href="#" class="links">Experience</a></li>
+					<li><a href="#t" class="links">Contact</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -35,7 +34,7 @@
 		<div class="wrapper">
 			<div class="experience-list">
 				<div class="square experience">
-					<a href="https://github.com/th30retical/sudoku-ai">
+					<a href="https://github.com/theodoretan/sudoku-ai" class="links">
 						<div class="img-wrapper">
 							<img class="exp-img" src="./assets/experience/sudoku-500.png" alt="">
 						</div>
@@ -47,7 +46,7 @@
 					</a>
 				</div>
 				<div class="square experience">
-					<a href="https://github.com/th30retical/barsbychickenloaft">
+					<a href="https://github.com/theodoretan/barsbychickenloaft" class="links">
 						<div class="img-wrapper">
 							<img class="exp-img" src="./assets/experience/bars-500.png" alt="">
 						</div>
@@ -59,7 +58,7 @@
 					</a>
 				</div>
 				<div class="square experience">
-					<a href="http://www.north60tech.com">
+					<a href="http://www.north60tech.com" class="links">
 						<div class="img-wrapper">
 							<img class="exp-img" src="./assets/experience/north60-500.png" alt="">
 						</div>
@@ -71,7 +70,7 @@
 					</a>
 				</div>
 				<div class="square experience">
-					<a href="https://github.com/th30retical/RideON">
+					<a href="https://github.com/theodoretan/RideON" class="links">
 						<div class="img-wrapper">
 							<img class="exp-img" src="./assets/experience/rideon-500.png" alt="">
 						</div>
@@ -83,7 +82,7 @@
 					</a>
 				</div>
 				<div class="square experience">
-					<a href="https://clausehound.com">
+					<a href="https://clausehound.com" class="links">
 						<div class="img-wrapper">
 							<img class="exp-img" src="./assets/experience/clausehound-500.png" alt="">
 						</div>
@@ -95,7 +94,7 @@
 					</a>
 				</div>
 				<div class="square experience">
-					<a href="https://github.com/th30retical/project_ration">
+					<a href="https://github.com/theodoretan/project_ration" class="links">
 						<div class="img-wrapper">
 							<img class="exp-img" src="./assets/experience/ration-500.png" alt="">
 						</div>
@@ -109,8 +108,13 @@
 			</div>
 		</div>
 
-		<div class="overlay hidden">
-			
+		<div class="modal pre-overlay">
+
+		</div>
+		<div class="modal overlay">
+			<div class="inner-overlay">
+				Coming Soon
+			</div>
 		</div>
 
     <script src="./js/main.js"></script>
