added x on overlay and responsive

--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
 
 		</div>
 		<div class="modal overlay">
+			<div class="cancel">
+				<img class="cancel-btn" src="./assets/cancel.png">
+			</div>
 			<div class="inner-overlay">
 				Coming Soon
 			</div>
