everything except contact

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 			</div>
 			<div class="right">
 				<ul class="nav-menu">
-					<li><a href="#" class="links">About Me</a></li>
-					<li><a href="#" class="links">Experience</a></li>
-					<li><a href="#t" class="links">Contact</a></li>
+					<li><a href="#" id="about" class="links">About Me</a></li>
+					<li><a href="./assets/files/resume.pdf" class="">Experience</a></li>
+					<li><a href="#" class="links">Contact</a></li>
 				</ul>
 			</div>
 		</nav>
 
 		<div class="wrapper">
 			<div class="experience-list">
-				<div class="square experience">
-					<a href="https://github.com/theodoretan/sudoku-ai" class="links">
+				<!-- <div class="square experience">
+					<a href="https://github.com/theodoretan/sudoku-ai" id="SudokuSolver" class="links">
 						<div class="img-wrapper">
 							<img class="exp-img" src="./assets/experience/sudoku-500.png" alt="">
 						</div>
@@ -44,9 +44,9 @@
 							</div>
 						</div>
 					</a>
-				</div>
+				</div> -->
 				<div class="square experience">
-					<a href="https://github.com/theodoretan/barsbychickenloaft" class="links">
+					<a href="https://github.com/theodoretan/barsbychickenloaft" id="Bars" class="links">
 						<div class="img-wrapper">
 							<img class="exp-img" src="./assets/experience/bars-500.png" alt="">
 						</div>
@@ -58,7 +58,7 @@
 					</a>
 				</div>
 				<div class="square experience">
-					<a href="http://www.north60tech.com" class="links">
+					<a href="http://www.north60tech.com" id="North60" class="links">
 						<div class="img-wrapper">
 							<img class="exp-img" src="./assets/experience/north60-500.png" alt="">
 						</div>
@@ -70,7 +70,7 @@
 					</a>
 				</div>
 				<div class="square experience">
-					<a href="https://github.com/theodoretan/RideON" class="links">
+					<a href="https://github.com/theodoretan/RideON" id="RideON" class="links">
 						<div class="img-wrapper">
 							<img class="exp-img" src="./assets/experience/rideon-500.png" alt="">
 						</div>
@@ -82,7 +82,7 @@
 					</a>
 				</div>
 				<div class="square experience">
-					<a href="https://clausehound.com" class="links">
+					<a href="https://clausehound.com" id="Clausehound" class="links">
 						<div class="img-wrapper">
 							<img class="exp-img" src="./assets/experience/clausehound-500.png" alt="">
 						</div>
@@ -94,7 +94,7 @@
 					</a>
 				</div>
 				<div class="square experience">
-					<a href="https://github.com/theodoretan/project_ration" class="links">
+					<a href="https://github.com/theodoretan/project_ration" id="ProjectRation" class="links">
 						<div class="img-wrapper">
 							<img class="exp-img" src="./assets/experience/ration-500.png" alt="">
 						</div>
