--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<ul class="nav-menu">
 					<li><a href="#" id="about" class="links">About Me</a></li>
 					<li><a href="./assets/files/resume.pdf" class="">Experience</a></li>
-					<li><a href="#" class="links">Contact</a></li>
+					<li><a href="#" id="contact" class="links">Contact</a></li>
 				</ul>
 			</div>
 		</nav>
