--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="right">
 				<ul class="nav-menu">
 					<li><a href="#" id="about" class="links">About Me</a></li>
-					<li><a href="./assets/files/resume.pdf" class="">Experience</a></li>
+					<li><a href="./assets/files/resume.pdf" class="">Resume</a></li>
 					<li><a href="#" id="contact" class="links">Contact</a></li>
 				</ul>
 			</div>
@@ -33,14 +33,38 @@
 
 		<div class="wrapper">
 			<div class="experience-list">
-				<!-- <div class="square experience">
-					<a href="https://github.com/theodoretan/sudoku-ai" id="SudokuSolver" class="links">
+				<!--<div class="square experience">
+					<a href="" id="WatsLit" class="links">
 						<div class="img-wrapper">
-							<img class="exp-img" src="./assets/experience/sudoku-500.png" alt="">
+							<img class="exp-img" src="./assets/experience/" alt="">
 						</div>
 						<div class="exp-words">
 							<div class="center">
-								<h3>Sudoku Solver</h3>
+								<h3>WatsLit</h3>
+							</div>
+						</div>
+					</a>
+				</div>-->
+				<!--<div class="square experience">
+					<a href="" id="StartHacks" class="links">
+						<div class="img-wrapper">
+							<img class="exp-img" src="./assets/experience/" alt="">
+						</div>
+						<div class="exp-words">
+							<div class="center">
+								<h3>StartHacks</h3>
+							</div>
+						</div>
+					</a>
+				</div>-->
+				<!-- <div class="square experience">
+					<a href="" id="SEED" class="links">
+						<div class="img-wrapper">
+							<img class="exp-img" src="./assets/experience/" alt="">
+						</div>
+						<div class="exp-words">
+							<div class="center">
+								<h3>SEED Pitch Competitionr</h3>
 							</div>
 						</div>
 					</a>
