--- a/index.html
+++ b/index.html
@@ -135,11 +135,26 @@
 		<div class="modal pre-overlay">
 
 		</div>
-		<div class="modal overlay">
+		<!--<div class="modal overlay">
 			<div class="cancel">
 				<img class="cancel-btn" src="./assets/cancel.png">
 			</div>
 			<div class="inner-overlay">
+			</div>
+		</div>-->
+
+		<div class="modal overlay">
+			<div class="modal-dialog">
+				<div class="cancel">
+					<img class="cancel-btn" src="./assets/cancel.png">
+				</div>
+				<div class="modal-content">
+					<div class="modal-header">
+						<h3 class="modal-title"></h3>
+					</div>
+					<div class="modal-body inner-overlay"></div>
+					<div class="modal-footer"></div>
+				</div>
 			</div>
 		</div>
 
